@startuml
abstract class Beverage {
    + void prepareRecipe()
    + void boilWater()
    + void pourInCup()
    + virtual bool customerWantsCondiments()
    # virtual void brew() = 0
    # virtual void addCondiments() = 0
}

class Tea {
    + void brew()
    + void addCondiments()
}

class Coffee {
    + void brew()
    + void addCondiments()
    + bool customerWantsCondiments()
}

Beverage <|-- Tea
Beverage <|-- Coffee

@enduml